--- a/index.html
+++ b/index.html
@@ -530,16 +530,12 @@
 
 <body>
     <!-- ヘッダーナビゲーション -->
-    <header class="header-nav">
-        <div class="nav-container">
-            <div class="logo">
-                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="40" height="40" rx="8" fill="#1a73e8" />
-                    <path d="M20 10L28 18H24V26H16V18H12L20 10Z" fill="white" />
-                    <path d="M12 22L20 30L28 22H24V14H16V22H12Z" fill="white" opacity="0.6" />
-                </svg>
-                <span class="logo-text">AdEffectMax</span>
-            </div>
+        <header class="header-nav">
+               <div class="nav-container">
+                   <div class="logo">
+                       <img src="upload/logo.svg" alt="AdEffectMax Logo" height="40">
+                       
+                   </div>
             
             <nav class="nav-links">
                 <a href="#overview" class="nav-link">サービス概要</a>
