--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
                 <a href="#models" class="nav-link">予測モデル</a>
                 <a href="#simulation" class="nav-link">効果シミュレーション</a>
                 <a href="#cases" class="nav-link">適用事例</a>
-                <a href="#contact" class="nav-link">お問い合わせ</a>
-                <button class="nav-button">資料ダウンロード</button>
+                <a href="https://evermind.co.jp/contact" class="nav-link">お問い合わせ</a>
+                <a href="https://evermind.co.jp/contact" class="nav-button">資料ダウンロード</a>
             </nav>
             
             <button class="mobile-menu-button">☰</button>
