--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 
                 <div class="hero-buttons">
                     <button class="primary-button">サービス詳細を見る</button>
-                    <button class="secondary-button">お問い合わせ</button>
+                    <a href="https://evermind.co.jp/contact" class="secondary-button">お問い合わせ</a>
                 </div>
             </div>
         </div>
