--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         .nav-links {
             display: flex;
             gap: 25px;
+            text-decoration: none;
         }
         
         .nav-link {
@@ -119,6 +120,7 @@
             font-weight: 500;
             cursor: pointer;
             transition: var(--transition);
+            text-decoration: none;
         }
         
         .nav-button:hover {
