--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
             opacity: 0;
             transform: translateY(20px);
             animation: fadeInUp 0.8s ease forwards 0.6s;
+            text-decoration: none;
         }
         
         .primary-button {
