--- a/index.html
+++ b/index.html
@@ -2377,7 +2377,7 @@
     </style>
 </head>
 <body>
-    <section id="prediction-models" class="models-section">
+    <section id="models" class="models-section">
         <div class="container">
             <div class="section-header">
                 <p class="section-subtitle">Prediction Models</p>
