--- a/index.html
+++ b/index.html
@@ -4290,7 +4290,7 @@
     </style>
 </head>
 <body>
-    <section id="simulation-model" class="simulation-section">
+    <section id="simulation" class="simulation-section">
         <div class="container">
             <div class="section-header">
                 <p class="section-subtitle">Simulation Model</p>
@@ -5686,7 +5686,7 @@
     </style>
 </head>
 <body>
-    <section id="case-studies" class="case-studies-section">
+    <section id="cases" class="case-studies-section">
         <div class="container">
             <div class="section-header">
                 <p class="section-subtitle">Case Studies</p>
