--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
     <!-- ヘッダーナビゲーション -->
         <header class="header-nav">
                <div class="nav-container">
+                　<a href="https://sub.evermind.co.jp/" style="text-decoration: none;">
                    <div class="logo">
                        <img src="upload/logo.svg" alt="AdEffectMax Logo" height="40">
                        
@@ -565,7 +566,7 @@
                 <p class="hero-subtitle">人口動態と地図情報に基づく人流予測×広告効果シミュレーション統合システム</p>
                 
                 <div class="hero-buttons">
-                    <button class="primary-button">サービス詳細を見る</button>
+                    <a href="#overview" class="primary-button">サービス詳細を見る</a>
                     <a href="https://evermind.co.jp/contact" class="secondary-button">お問い合わせ</a>
                 </div>
             </div>
@@ -8389,8 +8390,8 @@
                     専門コンサルタントが貴社の課題に合わせた最適なソリューションをご提案いたします。
                 </p>
                 <div class="cta-buttons">
-                    <button class="primary-button">資料をダウンロード</button>
-                    <button class="secondary-button">お問い合わせ</button>
+                    <a href="https://evermind.co.jp/contact" class="primary-button">資料をダウンロード</a>
+                    <a href="https://evermind.co.jp/contact" class="secondary-button">お問い合わせ</a>
                 </div>
             </div>
         </div>
