--- a/index.html
+++ b/index.html
@@ -4498,7 +4498,7 @@
                         <div class="simulation-header before-header">通常時（広告設置前）</div>
                         <div class="simulation-content">
                             <div class="simulation-visual" id="before-simulation">
-                                <!-- JavaScriptで描画 -->
+                                  <img src="upload/Before_1.png" alt="広告設置前のシミュレーション" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="simulation-stats">
                                 <div class="stat-item">
@@ -4525,7 +4525,7 @@
                         <div class="simulation-header after-header">広告設置後</div>
                         <div class="simulation-content">
                             <div class="simulation-visual" id="after-simulation">
-                                <!-- JavaScriptで描画 -->
+                                 <img src="upload/After_1.png" alt="広告設置後のシミュレーション" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="simulation-stats">
                                 <div class="stat-item">
