--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="hero-content">
                 <p class="hero-tagline">データドリブンな広告効果予測</p>
                 <h1 class="hero-title">屋外広告効果最大化サービス</h1>
-                <p class="hero-subtitle">人口動態と地図情報に基づく人流予測×広告効果シミュレーション統合システム</p>
+                <p class="hero-subtitle">人口動態と地図情報に基づく人流予測×広告効果シミュレーション統合サービス</p>
                 
                 <div class="hero-buttons">
                     <a href="#overview" class="primary-button">サービス詳細を見る</a>
