--- a/index.html
+++ b/index.html
@@ -5754,7 +5754,7 @@
                                     <div class="scenario-header before-header">導入前</div>
                                     <div class="scenario-body">
                                         <div class="scenario-image" id="intersection-before">
-                                            <!-- JavaScriptで描画 -->
+                                             <img src="upload/After_1.png" alt="導入前の状態" style="width: 100%; height: 100%; object-fit: cover;">
                                         </div>
                                         <div class="scenario-stats">
                                             <div class="stat-box">
@@ -5781,7 +5781,7 @@
                                     <div class="scenario-header after-header">導入後</div>
                                     <div class="scenario-body">
                                         <div class="scenario-image" id="intersection-after">
-                                            <!-- JavaScriptで描画 -->
+                                           <img src="upload/After_2.png" alt="導入後の状態" style="width: 100%; height: 100%; object-fit: cover;">
                                         </div>
                                         <div class="scenario-stats">
                                             <div class="stat-box">
@@ -5870,6 +5870,7 @@
                             <div class="chart-container">
                                 <div class="chart-title">時間帯別の広告効果最適化</div>
                                 <div class="chart-wrapper">
+                                    <img src="upload/Graph_2.png" alt="時間帯別の広告効果最適化グラフ" style="width: 100%; height: auto; max-height: 350px; object-fit: contain;">
                                     <canvas id="hourlyEffectChart"></canvas>
                                 </div>
                             </div>
