--- a/index.html
+++ b/index.html
@@ -5754,7 +5754,7 @@
                                     <div class="scenario-header before-header">導入前</div>
                                     <div class="scenario-body">
                                         <div class="scenario-image" id="intersection-before">
-                                             <img src="upload/After_1.png" alt="導入前の状態" style="width: 100%; height: 100%; object-fit: cover;">
+                                             <img src="upload/Before_2.png" alt="導入前の状態" style="width: 100%; height: 100%; object-fit: cover;">
                                         </div>
                                         <div class="scenario-stats">
                                             <div class="stat-box">
